generar qr y envío de correo
